--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,11 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+\.idea/caches/build_file_checksums\.ser
+
+\.idea/codeStyles/Project\.xml
+
+\.idea/misc\.xml
+
+\.idea/vcs\.xml
