--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -39,7 +39,8 @@ ext {
     supportLibsVersion          = "26.1.0"
     constraintLayoutVersion     = "1.0.2"
     multiDexVersion             = "1.0.1"
-    archRoomVersion             = "1.0.0-beta1"
+    archRoomVersion             = "1.0.0"
+    archExtensionsVersion       = "1.1.1"
     playServicesVersion         = "11.0.4"
     dagger2Version              = "2.12"
     gsonVersion                 = "2.8.1"
@@ -52,9 +53,9 @@ ext {
     jUnitVersion                = "4.12"
     mockitoVersion              = "2.17.0"
     mockitokotlinVersion        = "1.5.0"
-    kotlinVersion               = "1.1.51"
+    kotlinVersion               = "1.2.31"
     espressoCoreVersion         = "2.2.2"
-    AndroidDataBindingVersion   = "3.0.0"
+    AndroidDataBindingVersion   = "3.1.0"
 
     dependencies = [
             ConstraintLayout        : "com.android.support.constraint:constraint-layout:${constraintLayoutVersion}",
@@ -67,8 +68,6 @@ ext {
             PlayServicesMaps        : "com.google.android.gms:play-services-maps:${playServicesVersion}",
             PlayServicesLocation    : "com.google.android.gms:play-services-location:${playServicesVersion}",
             GcmPlayServices         : "com.google.android.gms:play-services-gcm:${playServicesVersion}",
-            Dagger2                 : "com.google.dagger:dagger:${dagger2Version}",
-            Dagger2Compiler         : "com.google.dagger:dagger-compiler:${dagger2Version}",
             Gson                    : "com.google.code.gson:gson:${gsonVersion}",
             Retrofit                : "com.squareup.retrofit2:retrofit:${retrofitVersion}",
             RetrofitConverterGson   : "com.squareup.retrofit2:converter-gson:${retrofitVersion}",
@@ -82,7 +81,13 @@ ext {
             ArchRoomRuntime         : "android.arch.persistence.room:runtime:${archRoomVersion}",
             ArchRoomRxJava2         : "android.arch.persistence.room:rxjava2:${archRoomVersion}",
             KotlinStdLib            : "org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}",
-            AndroidDatabinding      : "com.android.databinding:compiler:${AndroidDataBindingVersion}"
+            AndroidDatabinding      : "com.android.databinding:compiler:${AndroidDataBindingVersion}",
+            Dagger2                 : "com.google.dagger:dagger:${dagger2Version}",
+            Dagger2Compiler         : "com.google.dagger:dagger-compiler:${dagger2Version}",
+            DaggerAndroid           : "com.google.dagger:dagger-android:${dagger2Version}",
+            DaggerAndroidSupport    : "com.google.dagger:dagger-android-support:${dagger2Version}",
+            DaggerAndroidProcessor  : "com.google.dagger:dagger-android-processor:${dagger2Version}",
+            ArchExtensions          :  "android.arch.lifecycle:extensions:${archExtensionsVersion}"
     ]
 
     testDependencies = [
