--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".presentation.activities.SecondLevelActivity"
-            android:screenOrientation="portrait"/>
+        <activity android:name=".presentation.activities.SecondLevelActivity" />
     </application>
 
 </manifest>
