[kotlin_mvvm] chore (config): Change mockito artifact

--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -32,7 +32,8 @@ ext {
     archLifeCyclePackage = "android.arch.lifecycle"
 
     //Dependency
-    mockitoDependency = "mockito-inline" //old mockito mockito-core
+    mockitoInline = "mockito-inline" //old mockito
+    mockitoCore = "mockito-core"
 
 
 
@@ -90,7 +91,7 @@ ext {
 
     testDependencies = [
             JUnit                   : "junit:junit:${jUnitVersion}",
-            Mockito                 : buildDependency(mockitoPackage,mockitoDependency,mockitoVersion),
+            Mockito                 : buildDependency(mockitoPackage,mockitoCore,mockitoVersion),
             MockitoKotlin           : "com.nhaarman:mockito-kotlin:${mockitokotlinVersion}",
             KotlinReflect           : "org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}",
             EspressoCore            : "com.android.support.test.espresso:espresso-core:${espressoCoreVersion}",
